# ByU

./: README.md  캡스톤디자인 작품 포스터 양식(2019)_ByU_김영기.pptx
0602_연령별광고테스트/: byu_rooptest.py  main.py
3D_modeling/: all_body.SLDPRT  바디상단최종(카메라x).STL  바디상단최종.sldprt  바디중간최종.STL  바디중간최종.sldprt  바디하단최종.STL  바디하단최종.sldprt
ROS_byu_robot/byu_robot/: read.txt
StereoCamera_ImagaStitching/: Imagestitching.py  byu.py  camera_start_manual.txt  liboCams.py
advertise_trasmission_OcamS/: liboCams.py  main_byu.py
advertise_trasmission_OcamS/old_source/: byu_cp.py
advertising_main/: camera_start_manual.txt  main_byu (copy).py  main_byu.py  main_byu_DB.py  main_byu_vip.py
advertising_main/old_source/: old_main.py
advertising_main_class/: main_byu.py
byu_ultra/: byu_ultra.ino
face_Detecting/: byu.py  byu_rooptest.py  face_test.py
face_maching/: args_faceid_match.py  args_group_generator.py  args_learning_check.py  identipy_readme.txt
kivy/: kivy_test.py  my.kv  searchperson.py
kivy/matching_kivy/: args_group_generator.py  register.kv  register.py  searchperson.kv  searchperson.py
kivy/matching_kivy/cp_file/: searchperson (another copy).py  searchperson (copy).py
omni_Robot/ROS_byu_robot/byU_Robot_ros_version/: byU_Robot_ros_version.ino
omni_Robot/ROS_byu_robot/ros_package/byu_robot/: CMakeLists.txt  package.xml
omni_Robot/ROS_byu_robot/ros_package/byu_robot/src/: ultrasensor.cpp
omni_Robot/byU_Robot/: byU_Robot.ino
omni_Robot/byu_main/: byu_main.ino
omni_Robot/byu_robot_mode_add/: ROS_README.txt  byu_robot_mode_add.ino
(+2 files in other folders)
